# cwrubacktest

./: .gitignore  README.md  pyproject.toml
src/cwrubacktest/: __init__.py
src/cwrubacktest/alpha_models/: alpha_model.py  fixed_signals.py  single_signal.py
src/cwrubacktest/asset/: equity.py
src/cwrubacktest/asset/universe/: dynamic.py  static.py  universe.py
src/cwrubacktest/backtest/: backtest.py
src/cwrubacktest/broker/: broker.py
src/cwrubacktest/broker/fee_model/: flat_fee_model.py  pct_fee_model.py  zero_fee_model.py
src/cwrubacktest/broker/portfolio/: portfolio.py  portfolio_event.py  position.py  position_handler.py
src/cwrubacktest/broker/transaction/: transaction.py
src/cwrubacktest/data_handler/: csv_handler.py  data_handler.py
src/cwrubacktest/exchange/: exchange.py
src/cwrubacktest/execution/: exe_handler.py  order.py
src/cwrubacktest/execution/algo/: mkt_order.py
src/cwrubacktest/portbuild/: port_build_mdl.py
src/cwrubacktest/portbuild/optimizer/: equal_weight.py  fixed_weight.py  optimizer.py
src/cwrubacktest/portbuild/order_sizer/: dollar_weighted.py  long_short.py  order_sizer.py
src/cwrubacktest/sim/: sim_engine.py  sim_event.py
src/cwrubacktest/statistics/: performance.py  statistics.py  tearsheet.py
src/cwrubacktest/trading_strats/: rebalance.py  static_alloc.py  trading_strats.py
src/cwrubacktest/universe/: asset.py
src/cwrubacktest/utils/: settings.py
